crates/pg_syntax/tests/snapshots/postgres_regress/partition_info@12.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE ptif_test2 PARTITION OF ptif_test\n  FOR VALUES FROM (100) TO (200);"
---
CreateStmt@0..80
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..23
    Ident@13..23 "ptif_test2"
  Whitespace@23..24 " "
  Partition@24..33 "PARTITION"
  Whitespace@33..34 " "
  Of@34..36 "OF"
  Whitespace@36..37 " "
  RangeVar@37..46
    Ident@37..46 "ptif_test"
  Newline@46..47 "\n"
  Whitespace@47..49 "  "
  For@49..52 "FOR"
  Whitespace@52..53 " "
  Values@53..59 "VALUES"
  Whitespace@59..60 " "
  PartitionBoundSpec@60..78
    From@60..64 "FROM"
    Whitespace@64..65 " "
    Ascii40@65..66 "("
    AConst@66..69
      Iconst@66..69 "100"
    Ascii41@69..70 ")"
    Whitespace@70..71 " "
    To@71..73 "TO"
    Whitespace@73..74 " "
    Ascii40@74..75 "("
    AConst@75..78
      Iconst@75..78 "200"
  Ascii41@78..79 ")"
  Ascii59@79..80 ";"

