crates/pg_syntax/tests/snapshots/postgres_regress/partition_info@15.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT pg_partition_root('ptif_test0');"
---
SelectStmt@0..39
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..37
    FuncCall@7..37
      Ident@7..24 "pg_partition_root"
      Ascii40@24..25 "("
      AConst@25..37
        Sconst@25..37 "'ptif_test0'"
  Ascii41@37..38 ")"
  Ascii59@38..39 ";"

