crates/pg_syntax/tests/snapshots/postgres_regress/partition_info@2.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT * FROM pg_partition_tree(0);
---
SelectStmt@0..35
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeFunction@14..33
    List@14..33
      FuncCall@14..33
        Ident@14..31 "pg_partition_tree"
        Ascii40@31..32 "("
        AConst@32..33
          Iconst@32..33 "0"
  Ascii41@33..34 ")"
  Ascii59@34..35 ";"

