crates/pg_syntax/tests/snapshots/postgres_regress/partition_info@25.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE INDEX ptif_test11_index ON ptif_test11 (a);
---
IndexStmt@0..50
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Index@7..12 "INDEX"
  Whitespace@12..13 " "
  Ident@13..30 "ptif_test11_index"
  Whitespace@30..31 " "
  On@31..33 "ON"
  Whitespace@33..34 " "
  RangeVar@34..45
    Ident@34..45 "ptif_test11"
  Whitespace@45..46 " "
  Ascii40@46..47 "("
  IndexElem@47..48
    Ident@47..48 "a"
  Ascii41@48..49 ")"
  Ascii59@49..50 ";"

