crates/pg_syntax/tests/snapshots/postgres_regress/partition_info@3.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT * FROM pg_partition_ancestors(NULL);
---
SelectStmt@0..43
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeFunction@14..41
    List@14..41
      FuncCall@14..41
        Ident@14..36 "pg_partition_ancestors"
        Ascii40@36..37 "("
        AConst@37..41
          NullP@37..41 "NULL"
  Ascii41@41..42 ")"
  Ascii59@42..43 ";"

